# opc-pea-sdk

./: README.md  SYNC_METADATA.json  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
examples/diaokeshiguang/: MIRROR.md  README.md
examples/dipaitang/: MIRROR.md  README.md
examples/miaoxingqiu/: MIRROR.md  README.md
src/pea_core/: __init__.py  admin.py  context.py  embeddings.py  harness.py  memory.py
src/pea_core/web/: admin.html  md.js
templates/: PEA_TEMPLATE_MATRIX.md
