[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opc-pea-sdk"
version = "0.1.0"
description = "Reusable runtime modules for OPC Personal Economic Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pea_core = ["web/*.html", "web/*.js"]
